SonarQube/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sonar
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20G
    ingress.kubernetes.io/proxy-body-size: 20G
spec:
  rules:
  - host: ${DNS-host-name}
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-sonarqube
          servicePort: 9000
